--- a/main.css
+++ b/main.css
@@ -27,6 +27,11 @@
     text-align: center;
 }
 
+.piece:hover,
+.piece:focus {
+    cursor: pointer;
+}
+
 /* piece shape */
 .piece {
     border-bottom: 65px solid beige;
@@ -94,4 +99,30 @@
     position: absolute;
     top: -13px;
     left: 0;
+}
+
+.white-captures,
+.black-captures {
+    border: 2px black solid;
+    background: burlywood;
+    height: 90px;
+    margin: 10px;
+    position: relative;
+}
+
+.white-captures .piece,
+.black-captures .piece,
+.white-captures .shadow {
+    position: relative;
+    display: inline-block;
+}
+
+.white-captures .shadow {
+    top: 0;
+    left: 50px;
+    margin: -30px;
+}
+
+.flipped {
+    transform: rotate(180deg);
 }
