--- a/movements.css
+++ b/movements.css
@@ -1,3 +1,15 @@
 .selected {
     background: cyan;
 }
+
+.possible-move {
+    background: magenta;
+}
+
+.previous-move {
+    background: yellow;
+}
+
+.flipped {
+    transform: rotate(180deg);
+}
