--- a/main.css
+++ b/main.css
@@ -122,3 +122,19 @@
     left: 50px;
     margin: -30px;
 }
+
+.prompt {
+    position: fixed;
+    left: 25%;
+    top: 35%;
+    width: 45%;
+    height: 20%;
+    background: beige;
+    font-size: 48px;
+    font-family: "Meiryo", "MS PGothic", "sans-serif";
+    text-align: center;
+    border: 5px solid brown;
+    padding: 20px;
+    padding-top: 30px;
+    display: none;
+}
