--- a/main.css
+++ b/main.css
@@ -138,3 +138,14 @@
     padding-top: 30px;
     display: none;
 }
+
+@media only screen and (max-width: 400px) {
+    .piece:before {
+        top: -11px;
+    }
+
+    .board {
+        border: 1px solid black;
+        left: 0;
+    }
+}
