--- a/main.css
+++ b/main.css
@@ -1,21 +1,18 @@
 .board {
     padding: 10px;
-    border: 2px solid black;
-    width: 860px;
+    width: 844px;
     margin: 0 auto;
     background: black;
-}
-
-.row {
-    padding: 0;
-    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 2px;
 }
 
 .square {
-    border: 1px solid black;
     height: 90px;
-    display: inline-block;
     width: 90px;
+    display: inline-block;
     margin: 0;
     background: burlywood;
     position: relative;
