--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 .board {
     padding: 10px;
-    width: 844px;
+    width: 835px;
     margin: 0 auto;
     background: black;
     display: grid;
@@ -102,7 +102,8 @@
 .black-captures {
     border: 2px black solid;
     background: burlywood;
-    height: 90px;
+    min-height: 90px;
+    width: 100%;
     margin: 10px;
     position: relative;
 }
